Just some minor changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
       <h1>I'm KC</h1>
-      <h2>An Aspiring Web developer</h2>
+      <h2>Wanting To Be The Best</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
       <img src="images/mountain.png" alt="cloud-img" />
     </div>
@@ -24,7 +24,7 @@
         <img src="images/Tempfp.png" alt="profile photo" class="profile-photo" />
         <h2>Hello.</h2>
         <p class="intro">
-          I am aspiring web developer. I am also an anime nerd so if you want to debate me about who is stronger goku or saitama just ring me up.
+          I am aspiring web developer. My coding journey started in september of 2021 where I corrected myself; I praised myelf but in the end I tought myself;
         </p>
       </div>
       <hr />
