--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kunal Chaturvedi</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="favicon" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet"/>
